<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPeach"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/full_name"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_item_avatar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_item_name"
            android:layout_marginStart="10dp"
            android:text="@string/user_name"
            app:layout_constraintStart_toEndOf="@id/img_item_avatar"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

        <TextView
            android:id="@+id/tv_item_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_username"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/repository"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/img_item_avatar"
            app:layout_constraintTop_toBottomOf="@id/tv_item_username" />

        <TextView
            android:id="@+id/tv_item_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_repository"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:text="@string/followings"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/img_item_avatar"
            app:layout_constraintTop_toBottomOf="@id/tv_item_repository" />

        <TextView
            android:id="@+id/tv_item_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_repository"
            android:layout_marginStart="4dp"
            android:layout_marginTop="3dp"
            android:text="@string/follower"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/tv_item_following"
            app:layout_constraintTop_toBottomOf="@id/tv_item_repository" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>