<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@drawable/gradient_color"
        tools:context=".view.DetailActivity">

        <!--    <Button-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="25dp"-->
        <!--        android:background="#E91E63"-->
        <!--        android:text="@string/list"-->
        <!--        android:textColor="@android:color/white"-->
        <!--        android:textAllCaps="true"-->
        <!--        />-->




        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="Name"
            android:textColor="@android:color/black"
            android:textSize="24dp"
            android:textStyle="bold"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_item_avatar"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_item_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="3dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="Username"
            android:textSize="15dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />


        <RelativeLayout
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_item_avatar"
            app:layout_constraintVertical_bias="0.212">

            <TextView
                android:id="@+id/following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="44dp"
                android:layout_marginTop="15dp"
                android:text="@string/following_detail"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="146dp"
                android:text="@string/repositoriy_detail"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="163dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="44dp"
                android:text="@string/followers_detail"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_item_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/following"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="59dp"
                android:layout_marginTop="42dp"
                android:text="230"
                android:textColor="@android:color/black"
                android:textSize="15dp" />


            <TextView
                android:id="@+id/tv_item_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="169dp"
                android:text="119 "
                android:textColor="@android:color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tv_item_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/followers"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="59dp"
                android:text="900"
                android:textColor="@android:color/black"
                android:textSize="15dp" />



        </RelativeLayout>


        <TextView
            android:id="@+id/tv_item_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/work_in"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/tv_item_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/live_in"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/tabs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_company" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="21dp"

            app:layout_constraintBottom_toTopOf="@+id/tv_item_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorMaroon"
            android:minHeight="?actionBarSize"
            app:layout_constraintBottom_toTopOf="@+id/viewpager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_location"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="2dp"
            app:tabMode="fixed"
            app:tabRippleColor="@null"
            app:tabTextColor="@android:color/white" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            tools:layout_editor_absoluteX="32dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>